--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <script src="./Script/Script.js"></script>
   </head>
   <body class="bg container">
       <div class="col-md-6 offset-md-3 mt-3">
@@ -28,46 +29,6 @@
         <div class="d-flex justify-content-center">
           <p id="message" class="jersey-10-regular"></p>
         </div>
-        <script>
-          let secretNumber = Math.floor(Math.random() * 10) + 1;
-          function checkGuess() {
-            const guess = Number(document.getElementById("guessInput").value);
-            const message = document.getElementById("message");
-
-            if (!guess || guess < 1 || guess > 10) {
-              message.textContent =
-                "Please enter a valid number between 1 and 10.";
-              return;
-            }
-            if (guess > secretNumber) {
-              message.textContent = "🙈 Too high! Try again.";
-              flashColor("red");
-            } else if (guess < secretNumber) {
-              message.textContent = "🙊 Too low! Try again.";
-              flashColor("red");
-            } else {
-              message.textContent = "🎉 Correct! You guessed it!";
-              document.body.style.backgroundColor = "green";
-              document.getElementById("guessInput").disabled = true;
-            }
-            document.getElementById("guessInput").value = "";
-          }
-
-          function flashColor(color) {
-            document.body.style.backgroundColor = '#E55050';
-            setTimeout(() => {
-              document.body.style.backgroundColor = "";
-            }, 3000);
-          }
-
-          function resetGame() {
-            secretNumber = Math.floor(Math.random() * 10) + 1;
-            document.getElementById("guessInput").disabled = false;
-            document.getElementById("guessInput").value = "";
-            document.getElementById("message").textContent = "";
-            document.body.style.backgroundColor = "";
-          }
-        </script>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
   </body>
